archetect-templating/tests/snapshots/test_templates__vm@cmp.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% if two > one and two < three %}\n  test\n{% endif %}"
info:
  one: 1
  three: 3
  two: 2
input_file: archetect_templating/tests/inputs/cmp.txt
---

  test


