archetect-templating/tests/snapshots/test_templates__vm@concat.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ a ~ b }}"
info:
  a: foo
  b: bar
input_file: archetect_templating/tests/inputs/concat.txt
---
foobar

