archetect-templating/tests/snapshots/test_templates__vm@debug.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% with f = range %}{% for x in f(upper) %}{{ debug() }}{% endfor %}{% endwith %}"
info:
  upper: 1
input_file: archetect_minijinja/tests/inputs/debug.txt
---
State {
    name: "debug.txt",
    current_block: None,
    current_call: Some(
        "debug",
    ),
    auto_escape: None,
    ctx: {
        "x": 0,
        "loop": Loop {
            index0: 0,
            index: 1,
            length: 1,
            revindex: 1,
            revindex0: 0,
            first: true,
            last: true,
            depth: 1,
            depth0: 0,
            previtem: Undefined,
            nextitem: Undefined,
        },
        "f": archetect_minijinja::functions::builtins::range,
        "upper": 1,
    },
    env: Environment {
        globals: {
            "debug": archetect_minijinja::functions::builtins::debug,
            "dict": archetect_minijinja::functions::builtins::dict,
            "range": archetect_minijinja::functions::builtins::range,
        },
        tests: [
            "!=",
            "<",
            "<=",
            "==",
            ">",
            ">=",
            "defined",
            "endingwith",
            "eq",
            "equalto",
            "escaped",
            "even",
            "ge",
            "greaterthan",
            "gt",
            "in",
            "le",
            "lessthan",
            "lt",
            "mapping",
            "ne",
            "none",
            "number",
            "odd",
            "safe",
            "sequence",
            "startingwith",
            "string",
            "undefined",
        ],
        filters: [
            "abs",
            "attr",
            "batch",
            "bool",
            "capitalize",
            "concat",
            "count",
            "d",
            "default",
            "dictsort",
            "e",
            "escape",
            "extend",
            "first",
            "indent",
            "items",
            "join",
            "last",
            "length",
            "list",
            "lower",
            "map",
            "max",
            "min",
            "reject",
            "rejectattr",
            "replace",
            "reverse",
            "round",
            "safe",
            "select",
            "selectattr",
            "slice",
            "sort",
            "title",
            "tojson",
            "trim",
            "upper",
            "urlencode",
        ],
        templates: [
            "a_plus_b.txt",
            "bad_basic_block.txt",
            "call_macro.txt",
            "debug.txt",
            "example_macro.txt",
            "include_with_var_and_macro.txt",
            "layout_with_var.txt",
            "self-extends.txt",
            "self-include.txt",
            "simple2_layout.txt",
            "simple_include.txt",
            "simple_layout.txt",
            "super_with_html.html",
            "var_referencing_layout.txt",
            "var_setting_layout.txt",
        ],
    },
}

