archetect-templating/tests/snapshots/test_templates__vm@do_macro_calling_macro.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{%- from \"call_macro.txt\" import call %}\n{%- macro my_macro(value) %}[{{ value }}]{% endmacro %}\nnothing should show: {% do call(my_macro, 42) %}"
info: {}
input_file: archetect_minijinja/tests/inputs/do_macro_calling_macro.txt
---

nothing should show: 

