archetect-templating/tests/snapshots/test_templates__vm@err_bad_range.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ range(10001) }}"
info: {}
input_file: archetect_templating/tests/inputs/err_bad_range.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "range has too many elements",
    name: "err_bad_range.txt",
    line: 1,
}

invalid operation: range has too many elements (in err_bad_range.txt:1)
------------------------------ err_bad_range.txt ------------------------------
   1 > {{ range(10001) }}
     i    ^^^^^^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    range: archetect_templating::functions::builtins::range,
}
-------------------------------------------------------------------------------

